@@ -931,3 +931,5 @@
 	'Affiliate History' dialog was closed by clicking the 'X' button'.
 2025-07-18 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the 'Edit System' and 'Compose Mail' dialogs in davit(1).
+2025-07-19 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored dvtstamp(8).
